Configure juliahub badges

--- a/_css/franklin.css
+++ b/_css/franklin.css
@@ -1,3 +1,7 @@
+.franklin-content .badge img {
+  height: 20px;
+}
+
 /* ==================================================================
     VARIABLES
 ================================================================== */
