Add a couple of links

--- a/_layout/sidebar.html
+++ b/_layout/sidebar.html
@@ -7,8 +7,8 @@
   </div>
   <nav class="sidebar-nav">
     <a class="sidebar-nav-item {{ispage index.html}}active{{end}}" href="/">Home</a>
-    <a class="sidebar-nav-item {{ispage menu1/*}}active{{end}}" href="/narrative/">Concepts</a>
-    <a class="sidebar-nav-item {{ispage menu2/*}}active{{end}}" href="/code/">Code</a>
+    <a class="sidebar-nav-item {{ispage concepts/*}}active{{end}}" href="/narrative/">Concepts</a>
+    <a class="sidebar-nav-item {{ispage code/*}}active{{end}}" href="/code/">Code</a>
 
   </nav>
   <div class="sidebar-item">
